--- a/carry-your-live/package.json
+++ b/carry-your-live/package.json
@@ -17,25 +17,30 @@
     "@capacitor/haptics": "8.0.0",
     "@capacitor/keyboard": "8.0.0",
     "@capacitor/status-bar": "8.0.1",
-    "@ionic/react": "^8.5.0",
-    "@ionic/react-router": "^8.5.0",
+    "@ionic/react": "^8.7.17",
+    "@ionic/react-router": "^8.7.17",
+    "@tailwindcss/vite": "^4.1.18",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "@vitejs/plugin-legacy": "^7.2.1",
+    "autoprefixer": "^10.4.24",
     "ionicons": "^7.4.0",
+    "postcss": "^8.5.6",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-router": "^5.3.4",
-    "react-router-dom": "^5.3.4"
+    "react-router-dom": "^5.3.4",
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "@capacitor/cli": "8.1.0",
+    "@tailwindcss/postcss": "^4.1.18",
     "@testing-library/dom": ">=7.21.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
-    "@vitejs/plugin-legacy": "^5.0.0",
     "@vitejs/plugin-react": "^4.0.1",
     "cypress": "^13.5.0",
     "eslint": "^9.20.1",
@@ -47,7 +52,7 @@
     "terser": "^5.4.0",
     "typescript": "~5.9.0",
     "typescript-eslint": "^8.24.0",
-    "vite": "^5.0.0",
+    "vite": "^7.3.1",
     "vitest": "^0.34.6"
   },
   "description": "An Ionic project"
