--- a/carry-your-live/package.json
+++ b/carry-your-live/package.json
@@ -20,6 +20,7 @@
     "@capacitor/status-bar": "8.0.1",
     "@ionic/react": "^8.7.17",
     "@ionic/react-router": "^8.7.17",
+    "@ionic/storage": "^4.0.0",
     "@tailwindcss/vite": "^4.1.18",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
@@ -42,6 +43,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
+    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.0.1",
     "cypress": "^13.5.0",
     "eslint": "^9.20.1",
